--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,9 @@
-# Welcome to Telegram Notifications!  
-
-Telegram notifications provide a mechanism to get fast notifications on desired events that happens at 
-CloudBlue Connect platform in the scope of a given account, such as fulfillment requests, listings and a long etc...
-
-## Navigation
-*   [home](./README.md).
-*   [CONTRIBUTING.md](./CONTRIBUTING.md).
-*   [LICENSE.md](./LICENSE.md).
-*   [CHANGELOG](./CHANGELOG.md).
-
-
-## License
-
-**Telegram notify** is licensed under the *Apache Software License 2.0* license.
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-relative-links
+  - jekyll-remote-theme
+relative_links:
+  enabled: true
+  collections: true
+title: "Telegram Notifications"
+description: "Telegram notifications provide a mechanism to get fast notifications on desired events that happens at CloudBlue Connect platform in the scope of a given account, such as fulfillment requests, listings and a long etc..."
